# forum-front-app

./: .gitignore  README.md  angular.json  apresentação.md  karma.conf.js  package-lock.json  package.json
fakeapi/: app.py  db.py  pyproject.toml
src/: index.html
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/footer/: footer.component.html
src/app/forum/: forum.component.html
src/app/forum/cursos/: cursos.component.css  cursos.component.html  cursos.component.ts
src/app/forum/cursos/topicos/: topicos.component.css  topicos.component.html  topicos.component.ts
src/app/shared/model/: curso.model.ts  mock-cursos.ts  mock-topico.ts  resposta.model.ts  topicos.model.ts  user.model.ts
src/app/shared/models/: curso.model.ts  mock-cursos.ts  mock-topico.ts  mock-topicos.ts  resposta.model.ts  topicos.model.ts  usuario.model.ts
src/app/shared/service/: curso.service.ts  login.service.ts  topico.service.ts  usuario.service.ts
src/app/shared/services/: curso.service.ts  jwt.interceptor.ts  topico.service.ts  user.service.ts
src/app/user/: user.component.ts
src/app/user/login/: login.component.css  login.component.html  login.component.ts
src/app/views/curso/: curso.component.html
src/app/views/curso/lista-cursos/: lista-cursos.component.html  lista-cursos.component.ts
src/app/views/home/: home.component.css  home.component.html  home.component.ts
src/app/views/home/detalhes-topicos/: detalhes-topicos.component.css  detalhes-topicos.component.html  (+2 more)
src/app/views/usuario/: mock-usuarios.ts
(+20 files in other folders)
