[tool.poetry]
name = "fakeapi"
version = "0.1.0"
description = ""
authors = ["cesardddp <cesardddp@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "flask-cors"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
